Tagging jupyter notebook version in xbrain to prevent version conflicts with ilastik

--- a/docker-compose-tools.yml
+++ b/docker-compose-tools.yml
@@ -5,7 +5,7 @@ services:
         build:
             context: ./saber/xbrain
             dockerfile: Dockerfile
-        image: localhost:5000/aplbrain/xbrain
+        image: aplbrain/xbrain
 #    boss:
 #        privileged: true
 #        build:
