--- a/saber/xbrain/example2d/job.yml
+++ b/saber/xbrain/example2d/job.yml
@@ -14,10 +14,10 @@
 
 data: 
   class: File
-  path: data.nii
+  path: /your/path/to/data.nii
 cell_gt: 
   class: File
-  path: tj_anno.nii
+  path: /your/path/to/tj_anno.nii
 detect_threshold: 0.67
 stop: 0.47
 initial_template_size: 18
