--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,6 +56,9 @@ services:
             dockerfile: CWLDockerfile
         depends_on: 
             - webserver
+        environment:
+            - DOCKER_CLIENT_TIMEOUT=120
+            - COMPOSE_HTTP_TIMEOUT=120
         volumes:
             - ./conduit:/conduit
             - ~/.aws:/root/.aws
