removed debug print statements

--- a/saber/i2g/examples/I2G_Demo/job_simple.yaml
+++ b/saber/i2g/examples/I2G_Demo/job_simple.yaml
@@ -58,4 +58,4 @@ mode: synapse
 neuron_mode: 1
 agg_threshold: "0.5"
 seeds_cc_threshold: "5"
-#_saber_bucket: saber-batch
+_saber_bucket: saber-batch
