--- a/saber/boss_access/boss_test/job.yml
+++ b/saber/boss_access/boss_test/job.yml
@@ -1,3 +1,18 @@
+
+# Copyright 2019 The Johns Hopkins University Applied Physics Laboratory
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#    http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
 cwlVersion: v1.0
 class: Workflow
 inputs:
@@ -54,7 +69,7 @@ steps:
             [pull_output]
 # Inputs for BOSS
 host_name: api.bossdb.org
-token:  9feb8eedea069626a7e96336d5dd8229a61cc99a
+token:  6edf6eacfe4b5a36b7184ad477db1fd7876e7982
 coll_name: Kasthuri
 exp_name: em
 dtype_name: uint8
