removed boss token from example job yamls

--- a/saber/i2g/examples/I2G_Demo/job_simple.yaml
+++ b/saber/i2g/examples/I2G_Demo/job_simple.yaml
@@ -16,7 +16,7 @@
 #------------------------------------------------
 # general:
 host_bossdb: api.bossdb.org
-token_bossdb: 9feb8eedea069626a7e96336d5dd8229a61cc99a
+token_bossdb: [your token here]
 coll_name: Kasthuri
 exp_name: em
 coord_name: KasthuriFrame
