--- a/saber/xbrain/jobs/unet_train_job/params_sgd.yml
+++ b/saber/xbrain/jobs/unet_train_job/params_sgd.yml
@@ -1,21 +1,21 @@
-n_epochs:
-  range:
-    start: 100
-    stop: 400
-    step: 100
-  parameters:
-    abs: n_epochs
-  steps:
-    - optimize
-#mb_size:
-#  range:
-#    start: 2
-#    stop: 6
-#    step: 2
-#  parameters:
-#    abs: mb_size
-#  steps:
-#    - optimize
+# n_epochs:
+#   range:
+#     start: 100
+#     stop: 400
+#     step: 100
+#   parameters:
+#     abs: n_epochs
+#   steps:
+#     - optimize
+mb_size:
+ range:
+   start: 2
+   stop: 6
+   step: 2
+ parameters:
+   abs: mb_size
+ steps:
+   - optimize
 #n_mb_per_epoch:
 #  range:
 #    start: 2
