fixed datajoint safe mode issue

--- a/saber/xbrain/jobs/unet_train_job/params_sgd.yml
+++ b/saber/xbrain/jobs/unet_train_job/params_sgd.yml
@@ -1,30 +1,30 @@
 n_epochs:
   range:
-    start: 1
-    stop: 10
-    step: 1
+    start: 100
+    stop: 400
+    step: 100
   parameters:
     abs: n_epochs
   steps:
     - optimize
-# mb_size:
-#  range:
-#    start: 2
-#    stop: 8
-#    step: 2
-#  parameters:
-#    abs: mb_size
-#  steps:
-#    - optimize
-#n_mb_per_epoch:
-#  range:
-#    start: 2
-#    stop: 4
-#    step: 1
-#  parameters:
-#    abs: n_mb_per_epoch
-#  steps:
-#    - optimize
+mb_size:
+ range:
+   start: 2
+   stop: 8
+   step: 2
+ parameters:
+   abs: mb_size
+ steps:
+   - optimize
+n_mb_per_epoch:
+ range:
+   start: 2
+   stop: 4
+   step: 1
+ parameters:
+   abs: n_mb_per_epoch
+ steps:
+   - optimize
 #tile_size:
 #  range:
 #    start: 64
