--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
-#Ignore all local volume files
-volume/
-
+#Ignore all local volume and test files
+volumes/
+saber/i2g/neuroproof/test_data/
 #Ignore cache and DS_Store files
 *.DS_Store
 *.pyc
+
+#ignore notebooks
+*.ipynb
