--- a/saber/i2g/ffns/Dockerfile.inference
+++ b/saber/i2g/ffns/Dockerfile.inference
@@ -7,13 +7,14 @@ RUN apt-get install -yqq \
     python3-pip
 
 WORKDIR "ffn"
-COPY ./inference/driver.py . 
 COPY ./inference/main.sh .
 COPY ./inference/config.pbtxt .
 COPY ./inference/get-latest-checkpoint .
+COPY ./inference/npy2h5.py .
 COPY ./model /model
-COPY ./data /data
+RUN mkdir data/
 RUN mkdir /latest-model
 RUN export LATEST=`./get-latest-checkpoint`
 RUN cp /model/model.ckpt-$LATEST* /latest-model
+COPY ./inference/driver.py . 
 ENTRYPOINT ["python", "driver.py"]
