--- a/conduit/config/airflow.cfg
+++ b/conduit/config/airflow.cfg
@@ -1,7 +1,4 @@
 [core]
-# The home folder for airflow, default is ~/airflow
-airflow_home = /root
-
 # The folder where your airflow pipelines live, most likely a
 # subfolder in a code repository
 # This path must be absolute
@@ -9,7 +6,7 @@ dags_folder = /conduit/dags
 
 # The folder where airflow should store its log files
 # This path must be absolute
-base_log_folder = /root/logs
+base_log_folder = /conduit/logs
 
 # Airflow can store logs remotely in AWS S3 or Google Cloud Storage. Users
 # must supply an Airflow connection id that provides access to the storage
