set airflow home back to root

--- a/conduit/config/airflow.cfg
+++ b/conduit/config/airflow.cfg
@@ -6,7 +6,7 @@ dags_folder = /conduit/dags
 
 # The folder where airflow should store its log files
 # This path must be absolute
-base_log_folder = /conduit/logs
+base_log_folder = /root/logs
 
 # Airflow can store logs remotely in AWS S3 or Google Cloud Storage. Users
 # must supply an Airflow connection id that provides access to the storage
