fixed s3 intermediate storage bug

--- a/docker-compose-tools.yml
+++ b/docker-compose-tools.yml
@@ -24,8 +24,8 @@ services:
         privileged: true
         build:
             context: ./saber/xbrain/unets
-            dockerfile: Dockerfile.train
-        image: aplbrain/xbrain:unets
+            dockerfile: Dockerfile
+        image: aplbrain/unets
     boss:
         privileged: true
         build:
