--- a/saber/i2g/transfer_learning_workflows/membrane_experiments/membrane_job.yaml
+++ b/saber/i2g/transfer_learning_workflows/membrane_experiments/membrane_job.yaml
@@ -12,35 +12,13 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# BOSS:
-#------------------------------------------------
-# general:
-host_bossdb: api.bossdb.io
-token_bossdb: 565bc40a9555561a04547bfc941c2663e56f8799
-coll_name: Kasthuri
-exp_name: ac4
-coord_name: ac4-cf
-resolution: 0
-xmin: 0
-xmax: 256
-ymin: 0
-ymax: 256
-zmin: 0
-zmax: 25
-padding: 0
-onesided: 0
-#inputs:
-in_chan_name_raw: em
-in_chan_name_ann: ann
-itype_name_in: image
-dtype_name_in: uint8
-#outputs
-pull_output_name_raw: pull_output_raw.npy
-pull_output_name_ann: pull_output_ann.npy
 
 #General: 
-width: 256
-height: 256
-mode: synapse
+width: 512
+height: 512
 #Synapse_detection
-synapse_output: synapse_output.npy
+input:
+  class: File
+  path: ISBI/isbi_train_raw.npy 
+output: isbi_train_membrane_output.npy
+
