--- a/saber/i2g/examples/I2G_Demo/job_simple.yaml
+++ b/saber/i2g/examples/I2G_Demo/job_simple.yaml
@@ -15,8 +15,8 @@
 # BOSS:
 #------------------------------------------------
 # general:
-host_bossdb: api.bossdb.org
-token_bossdb: <your token here>
+host_bossdb: api.bossdb.io
+token_bossdb: token
 coll_name: Kasthuri
 exp_name: em
 coord_name: KasthuriFrame
