--- a/saber/i2g/examples/I2G_Neuroproof/job_neuroproof_deploy.yaml
+++ b/saber/i2g/examples/I2G_Neuroproof/job_neuroproof_deploy.yaml
@@ -14,9 +14,8 @@
 
 # BOSS:
 #------------------------------------------------
-# general:
 host_bossdb: api.bossdb.io
-token_bossdb: 
+token_bossdb: public
 coll_name: kasthuri2015
 exp_name: ac4
 coord_name: ac4-cf
@@ -29,17 +28,13 @@ zmin: 0
 zmax: 64
 padding: 0
 onesided: 0
+
 #inputs:
 in_chan_name_raw: em
-in_chan_name_ann: neuron
 itype_name_in: image
 dtype_name_in: uint8
 #outputs
 pull_output_name_raw: pull_output_raw.npy
-pull_output_name_ann: pull_output_ann.npy
-
-#1760:8960/3680:10560/400:1800
-# ```{'x_bounds': [11980, 15648], 'y_bounds': [12118, 15784], 'z_bounds': [631, 998]}```
 
 #PROCESSING:
 #------------------------------------------------
