--- a/demos/job_dvid_ffn.yml
+++ b/demos/job_dvid_ffn.yml
@@ -1,18 +1,20 @@
 # DVID:
-host_name: flyem.dvid.io
-uuid: 73581d2d46fc445d83cf98382b566b55
-resource_name: fib19-grayscale
+host_name: 3.209.156.251:8001
+uuid: 56e2e4251774426abdde8cdee4be747e
+resource_name: validation
 dtype_name: uint8
+type: uint8blk
 resolution: 0
-xmin: 11000
-xmax: 11256
-ymin: 5200
-ymax: 5456
-zmin: 11000
-zmax: 11256
+xmin: 0
+xmax: 64
+ymin: 0
+ymax: 64
+zmin: 0
+zmax: 64
 pull_output_name: medulla7_raw.npy
 resource_name_out: ffn_segmentation
 dtype_name_out: uint64
+type_out: labelblk
 
 # FFN segmentation
 image_mean: 128
@@ -27,5 +29,5 @@ min_boundary_dist: 1,1,1
 segment_threshold: 0.6
 min_segment_size: 1000
 bound_start: 0,0,0
-bound_stop: 256,256,256
+bound_stop: 64,64,64
 outfile: medulla7_ffn_out.npy
