--- a/saber/i2g/neuroproof/Dockerfile
+++ b/saber/i2g/neuroproof/Dockerfile
@@ -18,6 +18,6 @@ RUN pip install numpy h5py
 
 WORKDIR /app
 COPY driver.py /app/driver.py
-COPY kasthuri_classifier.xml /app/kasthuri_classifier.xml
+# COPY kasthuri_classifier.xml /app/kasthuri_classifier.xml
 #RUN git clone https://github.com/janelia-flyem/neuroproof_examples.git
 ENTRYPOINT ["python3", "driver.py" ]
