--- a/saber/i2g/neuroproof/Dockerfile
+++ b/saber/i2g/neuroproof/Dockerfile
@@ -20,4 +20,5 @@ WORKDIR /app
 COPY driver.py /app/driver.py
 # COPY kasthuri_classifier.xml /app/kasthuri_classifier.xml
 #RUN git clone https://github.com/janelia-flyem/neuroproof_examples.git
+RUN wget --directory-prefix /app/kasthuri_classifier.xml https://saber-batch-dev.s3.amazonaws.com/kasthuri_classifier.xml
 ENTRYPOINT ["python3", "driver.py" ]
