shift to http port

--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -4,4 +4,4 @@ pandas
 boto3
 PyYAML
 uwsgi
--e git+https://gitlab.jhuapl.edu/microns/analysis.git@482475e96d1ccca64ffc1f121ac5111afc0a8841#egg=microns_analysis
+# -e git+https://gitlab.jhuapl.edu/microns/analysis.git@482475e96d1ccca64ffc1f121ac5111afc0a8841#egg=microns_analysis
