--- a/saber/dummytask/Dockerfile
+++ b/saber/dummytask/Dockerfile
@@ -1,5 +1,7 @@
-FROM python:3.6-slim
-
+FROM nvidia/cuda:11.2.1-devel-ubuntu20.04
+RUN apt-get update
+RUN apt-get install -yqq python3-dev python3-pip
+RUN pip3 install torch
 COPY main.py /app/main.py
 COPY run.sh /app/run.sh
 RUN chmod +x /app/run.sh
