--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,7 +66,7 @@ services:
             - ./demos:/demos
             - /var/run/docker.sock:/var/run/docker.sock
 
-        command: tail -F root
+#        command: tail -F root
     datajoint:
         image: datajoint/mysql
         ports:
